--- a/about.html
+++ b/about.html
@@ -57,12 +57,15 @@
 			<p>The developers of this project have ideas for more functionality and fun, but due to time constraints and the lightning-fast pace of the Coding Bootcamp, the future plans for this app are shelved for the time being.</p>
 			<p>Here are some features that we would like to implement:</p>
 			<ol>
-				<li>RSVP button with headcount for each event.</li>
-				<li>Map display of the event location upon a button click.</li>
-				<li>Event-time fluidity across time zones.</li>
-				<li>Ability for the Greeter to upload a picture.</li>
-				<li>When mobile, allow the Greeter to take a selfie as opposed to uploading the photo.</li>
-				<li>A real database.</li>
+				<li>RSVP button with headcount for each event</li>
+				<li>Map display of the event location upon a button click</li>
+				<li>Event-time fluidity across time zones</li>
+				<li>Ability for the Greeter to upload a picture</li>
+				<li>When mobile, allow the Greeter to take a selfie as opposed to uploading the photo</li>
+				<li>Message board or chat capability</li>
+				<li>Event rating, tagging, and saving</li>
+				<li>Ability to add event to calendar</li>
+				<li>A real database</li>
 			</ol>
 		</div> <!-- explain -->
 
