--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 		<!-- app explanation -->
 		<div class="pure-u-1 align-center about">
 			Meet Me There is a lightweight social application.
-			<p>There's no account to create, and the events are removed from the database soon after ending.</p>
+			<p>There's no account to create, and the events are removed from list after ending.</p>
 			<p>Create or search for an event near you, and go meet new people.</p>
 			<p>This app is a collaborative effort for the purpose of a project for UNC Chapel Hill's Coding Bootcamp.</p>
 
