added brint's picture

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 		</div>
 
 		<div class="pure-u-1 pure-u-md-1-6 align-center dev-pic">
-			<img src="http://lorempixel.com/400/400/" alt="Grey Arnold" class="pure-img">
+			<img src="assets/images/brinthansen.jpg" alt="Grey Arnold" class="pure-img">
 			<br>
 			Brint Hansen
 		</div>
