greeter inputs cleared on submit

--- a/greeters.html
+++ b/greeters.html
@@ -82,7 +82,7 @@
 						<div class="pure-control-group">
 							<label for="start">Choose Time</label>
 							<select id="start">
-								<option>--:-- --</option>
+								<option></option>
 								<option>12:00 AM</option>
 								<option>12:30 AM</option>
 								<option>1:00 AM</option>
@@ -179,7 +179,7 @@
 						<div class="pure-control-group">
 							<label for="start">Start Time</label>
 							<select id="startEvent">
-								<option>--:-- --</option>
+								<option></option>
 								<option>12:00 AM</option>
 								<option>12:30 AM</option>
 								<option>1:00 AM</option>
@@ -235,7 +235,7 @@
 						<div class="pure-control-group">
 							<label for="end">End Time</label>
 							<select id="end">
-								<option>--:-- --</option>
+								<option></option>
 								<option>12:00 AM</option>
 								<option>12:30 AM</option>
 								<option>1:00 AM</option>
