change location name since it was saving as an address

--- a/greeters.html
+++ b/greeters.html
@@ -163,9 +163,15 @@
 							<input id="event" type="text">
 						</div>
 
+						<!-- event name -->
+						<div class="pure-control-group">
+							<label for="event">Location</label>
+							<input id="locationName" type="text">
+						</div>
+
 						<!-- event location -->
 						<div class="pure-control-group">
-							<label for="location">Location</label>
+							<label for="location">Address</label>
 							<input id="pac-input" class="controls" type="text" placeholder="">
 						</div>
 
