--- a/greeters.html
+++ b/greeters.html
@@ -172,7 +172,7 @@
 						<!-- event location -->
 						<div class="pure-control-group">
 							<label for="location">Address</label>
-							<input id="pac-input" class="controls" type="text" placeholder="">
+							<input id="pac-input" class="controls" type="text" placeholder="Google Search">
 						</div>
 
 						<!-- date -->
