changed wording for weather checking on meeter page

--- a/greeters.html
+++ b/greeters.html
@@ -165,7 +165,7 @@
 
 						<!-- event name -->
 						<div class="pure-control-group">
-							<label for="event">Location</label>
+							<label for="eventPlace">Location</label>
 							<input id="locationName" type="text">
 						</div>
 
