--- a/meeters.html
+++ b/meeters.html
@@ -79,7 +79,7 @@
 
 		<!-- weather -->
 		<div class="pure-u-1 weather">
-			<div class="align-center">Check the weather before creating an event!</div>
+			<div class="align-center">Check the weather before choosing an event!</div>
 			<p>
 				<form class="pure-form pure-form-aligned">
 					<fieldset>
