about page content changes

--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
 		<!-- app explanation -->
 		<div class="pure-u-1 align-center about">
 			Meet Me There is a lightweight social application.
-			<p>There's no account to create, and the events are removed from list after ending.</p>
+			<p>There's no account to create, and it doesn't link to any existing accounts.</p>
 			<p>Create or search for an event near you, and go meet new people.</p>
-			<p>This app is a collaborative effort for the purpose of a project for UNC Chapel Hill's Coding Bootcamp.</p>
+			<p>We believe in allowing connections to happen organically. With a little help from this app, you can meet people before you stalk them on social media.</p>
 
 		</div> <!-- explain -->
 
@@ -65,6 +65,9 @@
 				<li>Message board or chat capability</li>
 				<li>Event rating, tagging, and saving</li>
 				<li>Ability to add event to calendar</li>
+				<li>A responsive table</li>
+				<li>Event display in chronological order</li>
+				<li>Delete events after expiration</li>
 				<li>A real database</li>
 			</ol>
 		</div> <!-- explain -->
