disabled get location button

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<form class="pure-form">
 				<fieldset>
 					<!-- submit button -->
-					<button type="submit" class="pure-button pure-button-primary" id="get-user-location"><i class="fas fa-globe"></i> Give Location</button>
+					<button type="submit" class="pure-button pure-button-primary pure-button-disabled" id="get-user-location"><i class="fas fa-globe"></i> Give Location</button>
 				</fieldset>
 			</form>
 		</div> <!-- explain -->
